--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "parcel-bundler": "^1.11.0",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3"
+    "preact": "^8.4.2",
+    "preact-compat": "^3.18.4",
+    "todo": "^1.1.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3"
+    "babel-core": "^6.26.3",
+    "babel-preset-preact": "^1.1.0",
+    "parcel-bundler": "^1.11.0"
   }
 }
